--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -21,18 +21,18 @@
         "id": "toWe1IoH7X35"
       },
       "source": [
-        "# Illustra: Multi-text to Image\r\n",
-        "\r\n",
-        "Based on [CLIP](https://github.com/openai/CLIP) + FFT from [Lucent](https://github.com/greentfrapp/lucent) // made by [eps696](https://github.com/eps696) [Vadim Epstein]  \r\n",
-        "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly) for ideas\r\n",
-        "\r\n",
-        "## Features \r\n",
-        "* **continuously processes phrase lists** (e.g. illustrating lyrics)\r\n",
-        "* generates [FFT-encoded](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) image (massive detailed textures, a la deepdream)\r\n",
-        "* fast convergence\r\n",
-        "* undemanding for RAM - fullHD/4K and above\r\n",
-        "* saving/loading FFT snapshots to resume processing\r\n",
-        "* selectable CLIP model\r\n"
+        "# Illustra: Multi-text to Image\n",
+        "\n",
+        "Based on [CLIP](https://github.com/openai/CLIP) + FFT from [Lucent](https://github.com/greentfrapp/lucent) // made by [eps696](https://github.com/eps696) [Vadim Epstein]  \n",
+        "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly) for ideas\n",
+        "\n",
+        "## Features \n",
+        "* **continuously processes phrase lists** (e.g. illustrating lyrics)\n",
+        "* generates [FFT-encoded](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) image (massive detailed textures, a la deepdream)\n",
+        "* fast convergence\n",
+        "* undemanding for RAM - fullHD/4K and above\n",
+        "* saving/loading FFT snapshots to resume processing\n",
+        "* selectable CLIP model\n"
       ]
     },
     {
@@ -41,8 +41,8 @@
         "id": "QytcEMSKBtN-"
       },
       "source": [
-        "**Run the cell below after each session restart**\r\n",
-        "\r\n",
+        "**Run the cell below after each session restart**\n",
+        "\n",
         "Mark `resume` and upload `.pt` file, if you're resuming from the saved params."
       ]
     },
@@ -53,116 +53,116 @@
         "cellView": "form"
       },
       "source": [
-        "#@title General setup\r\n",
-        "\r\n",
-        "import subprocess\r\n",
-        "CUDA_version = [s for s in subprocess.check_output([\"nvcc\", \"--version\"]).decode(\"UTF-8\").split(\", \") if s.startswith(\"release\")][0].split(\" \")[-1]\r\n",
-        "print(\"CUDA version:\", CUDA_version)\r\n",
-        "\r\n",
-        "if CUDA_version == \"10.0\":\r\n",
-        "    torch_version_suffix = \"+cu100\"\r\n",
-        "elif CUDA_version == \"10.1\":\r\n",
-        "    torch_version_suffix = \"+cu101\"\r\n",
-        "elif CUDA_version == \"10.2\":\r\n",
-        "    torch_version_suffix = \"\"\r\n",
-        "else:\r\n",
-        "    torch_version_suffix = \"+cu110\"\r\n",
-        "\r\n",
-        "!pip install torch==1.7.1{torch_version_suffix} torchvision==0.8.2{torch_version_suffix} -f https://download.pytorch.org/whl/torch_stable.html ftfy regex\r\n",
-        "\r\n",
-        "try: \r\n",
-        "  !pip3 install googletrans==3.1.0a0\r\n",
-        "  from googletrans import Translator, constants\r\n",
-        "  translator = Translator()\r\n",
-        "except: pass\r\n",
-        "!pip install ftfy==5.8\r\n",
-        "\r\n",
-        "!apt-get -qq install ffmpeg\r\n",
-        "from google.colab import drive\r\n",
-        "drive.mount('/G', force_remount=True)\r\n",
-        "gdir = !ls /G/\r\n",
-        "gdir = '/G/%s/' % str(gdir[0])\r\n",
-        "%cd $gdir\r\n",
-        "work_dir = 'illustra'\r\n",
-        "work_dir = gdir + work_dir + '/'\r\n",
-        "import os\r\n",
-        "os.makedirs(work_dir, exist_ok=True)\r\n",
-        "%cd $work_dir\r\n",
-        "\r\n",
-        "import os\r\n",
-        "import io\r\n",
-        "import time\r\n",
-        "import math\r\n",
-        "# from math import exp\r\n",
-        "import random\r\n",
-        "import imageio\r\n",
-        "import numpy as np\r\n",
-        "import PIL\r\n",
-        "# from skimage import exposure\r\n",
-        "from base64 import b64encode\r\n",
-        "import shutil\r\n",
-        "\r\n",
-        "import torch\r\n",
-        "import torch.nn as nn\r\n",
-        "import torch.nn.functional as F\r\n",
-        "import torchvision\r\n",
-        "from torch.autograd import Variable\r\n",
-        "\r\n",
-        "from IPython.display import HTML, Image, display, clear_output\r\n",
-        "from IPython.core.interactiveshell import InteractiveShell\r\n",
-        "InteractiveShell.ast_node_interactivity = \"all\"\r\n",
-        "import ipywidgets as ipy\r\n",
-        "# import glob\r\n",
-        "from google.colab import output, files\r\n",
-        "\r\n",
-        "import warnings\r\n",
-        "warnings.filterwarnings(\"ignore\")\r\n",
-        "\r\n",
-        "!pip install git+https://github.com/openai/CLIP.git\r\n",
-        "import clip\r\n",
-        "!pip install git+https://github.com/Po-Hsun-Su/pytorch-ssim\r\n",
-        "import pytorch_ssim as ssim\r\n",
-        "\r\n",
-        "%cd /content\r\n",
-        "!rm -rf aphantasia\r\n",
-        "!git clone https://github.com/eps696/aphantasia\r\n",
-        "%cd aphantasia/\r\n",
-        "from clip_fft import to_valid_rgb, fft_image, slice_imgs, checkout\r\n",
-        "from utils import pad_up_to, basename, file_list, img_list, img_read\r\n",
-        "from progress_bar import ProgressIPy as ProgressBar\r\n",
-        "\r\n",
-        "clear_output()\r\n",
-        "\r\n",
-        "resume = False #@param {type:\"boolean\"}\r\n",
-        "if resume:\r\n",
-        "  resumed = files.upload()\r\n",
-        "  params_pt = list(resumed.values())[0]\r\n",
-        "  params_pt = torch.load(io.BytesIO(params_pt))\r\n",
-        "\r\n",
-        "def read_pt(file):\r\n",
-        "  return torch.load(file).cuda()\r\n",
-        "\r\n",
-        "def ema(base, next, step):\r\n",
-        "    scale_ma = 1. / (step + 1)\r\n",
-        "    return next * scale_ma + base * (1.- scale_ma)\r\n",
-        "\r\n",
-        "def save_img(img, fname=None):\r\n",
-        "  img = np.array(img)[:,:,:]\r\n",
-        "  img = np.transpose(img, (1,2,0))  \r\n",
-        "  img = np.clip(img*255, 0, 255).astype(np.uint8)\r\n",
-        "  if fname is not None:\r\n",
-        "    imageio.imsave(fname, np.array(img))\r\n",
-        "    imageio.imsave('result.jpg', np.array(img))\r\n",
-        "\r\n",
-        "def makevid(seq_dir, size=None):\r\n",
-        "  out_sequence = seq_dir + '/%05d.jpg'\r\n",
-        "  out_video = seq_dir + '.mp4'\r\n",
-        "  !ffmpeg -y -v quiet -i $out_sequence $out_video\r\n",
-        "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\r\n",
-        "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\r\n",
-        "  return \"\"\"<video %s controls><source src=\"%s\" type=\"video/mp4\"></video>\"\"\" % (wh, data_url)\r\n",
-        "\r\n",
-        "!nvidia-smi -L\r\n",
+        "#@title General setup\n",
+        "\n",
+        "import subprocess\n",
+        "CUDA_version = [s for s in subprocess.check_output([\"nvcc\", \"--version\"]).decode(\"UTF-8\").split(\", \") if s.startswith(\"release\")][0].split(\" \")[-1]\n",
+        "print(\"CUDA version:\", CUDA_version)\n",
+        "\n",
+        "if CUDA_version == \"10.0\":\n",
+        "    torch_version_suffix = \"+cu100\"\n",
+        "elif CUDA_version == \"10.1\":\n",
+        "    torch_version_suffix = \"+cu101\"\n",
+        "elif CUDA_version == \"10.2\":\n",
+        "    torch_version_suffix = \"\"\n",
+        "else:\n",
+        "    torch_version_suffix = \"+cu110\"\n",
+        "\n",
+        "!pip install torch==1.7.1{torch_version_suffix} torchvision==0.8.2{torch_version_suffix} -f https://download.pytorch.org/whl/torch_stable.html ftfy regex\n",
+        "\n",
+        "try: \n",
+        "  !pip3 install googletrans==3.1.0a0\n",
+        "  from googletrans import Translator, constants\n",
+        "  translator = Translator()\n",
+        "except: pass\n",
+        "!pip install ftfy==5.8\n",
+        "\n",
+        "!apt-get -qq install ffmpeg\n",
+        "from google.colab import drive\n",
+        "drive.mount('/G', force_remount=True)\n",
+        "gdir = !ls /G/\n",
+        "gdir = '/G/%s/' % str(gdir[0])\n",
+        "%cd $gdir\n",
+        "work_dir = 'illustra'\n",
+        "work_dir = gdir + work_dir + '/'\n",
+        "import os\n",
+        "os.makedirs(work_dir, exist_ok=True)\n",
+        "%cd $work_dir\n",
+        "\n",
+        "import os\n",
+        "import io\n",
+        "import time\n",
+        "import math\n",
+        "# from math import exp\n",
+        "import random\n",
+        "import imageio\n",
+        "import numpy as np\n",
+        "import PIL\n",
+        "# from skimage import exposure\n",
+        "from base64 import b64encode\n",
+        "import shutil\n",
+        "\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "import torchvision\n",
+        "from torch.autograd import Variable\n",
+        "\n",
+        "from IPython.display import HTML, Image, display, clear_output\n",
+        "from IPython.core.interactiveshell import InteractiveShell\n",
+        "InteractiveShell.ast_node_interactivity = \"all\"\n",
+        "import ipywidgets as ipy\n",
+        "# import glob\n",
+        "from google.colab import output, files\n",
+        "\n",
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\")\n",
+        "\n",
+        "!pip install git+https://github.com/openai/CLIP.git\n",
+        "import clip\n",
+        "!pip install git+https://github.com/Po-Hsun-Su/pytorch-ssim\n",
+        "import pytorch_ssim as ssim\n",
+        "\n",
+        "%cd /content\n",
+        "!rm -rf aphantasia\n",
+        "!git clone https://github.com/eps696/aphantasia\n",
+        "%cd aphantasia/\n",
+        "from clip_fft import to_valid_rgb, fft_image, slice_imgs, checkout\n",
+        "from utils import pad_up_to, basename, file_list, img_list, img_read\n",
+        "from progress_bar import ProgressIPy as ProgressBar\n",
+        "\n",
+        "clear_output()\n",
+        "\n",
+        "resume = False #@param {type:\"boolean\"}\n",
+        "if resume:\n",
+        "  resumed = files.upload()\n",
+        "  params_pt = list(resumed.values())[0]\n",
+        "  params_pt = torch.load(io.BytesIO(params_pt))\n",
+        "\n",
+        "def read_pt(file):\n",
+        "  return torch.load(file).cuda()\n",
+        "\n",
+        "def ema(base, next, step):\n",
+        "    scale_ma = 1. / (step + 1)\n",
+        "    return next * scale_ma + base * (1.- scale_ma)\n",
+        "\n",
+        "def save_img(img, fname=None):\n",
+        "  img = np.array(img)[:,:,:]\n",
+        "  img = np.transpose(img, (1,2,0))  \n",
+        "  img = np.clip(img*255, 0, 255).astype(np.uint8)\n",
+        "  if fname is not None:\n",
+        "    imageio.imsave(fname, np.array(img))\n",
+        "    imageio.imsave('result.jpg', np.array(img))\n",
+        "\n",
+        "def makevid(seq_dir, size=None):\n",
+        "  out_sequence = seq_dir + '/%05d.jpg'\n",
+        "  out_video = seq_dir + '.mp4'\n",
+        "  !ffmpeg -y -v quiet -i $out_sequence $out_video\n",
+        "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\n",
+        "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\n",
+        "  return \"\"\"<video %s controls><source src=\"%s\" type=\"video/mp4\"></video>\"\"\" % (wh, data_url)\n",
+        "\n",
+        "!nvidia-smi -L\n",
         "print('\\nDone!')"
       ],
       "execution_count": null,
@@ -175,9 +175,9 @@
         "cellView": "form"
       },
       "source": [
-        "#@title Upload text file\r\n",
-        "\r\n",
-        "translate = False #@param {type:\"boolean\"}\r\n",
+        "#@title Upload text file\n",
+        "\n",
+        "translate = False #@param {type:\"boolean\"}\n",
         "uploaded = files.upload()"
       ],
       "execution_count": null,
@@ -189,21 +189,21 @@
         "id": "f3Sj0fxmtw6K"
       },
       "source": [
-        "Set the desired video resolution and `duration` (in sec).  \r\n",
-        "Select CLIP `model` (results do vary!). I prefer ViT for consistency.  \r\n",
-        "\r\n",
-        "Set `overscan` to produce semi-seamlessly tileable texture (when off, it's more centered).  \r\n",
-        "Try adding `noise_scale` to explore some compositional changes.  \r\n",
-        "Decrease `samples` if you face OOM (it's the main RAM eater).  \r\n",
-        "Increasing `steps` will elaborate details and make tones smoother, but may start throwing texts like graffiti (and will obviously take more time).  \r\n",
-        "`show_freq` controls preview frequency (doesn't affect the results; one can set it higher to speed up process). \r\n",
-        "\r\n",
-        "Other tricks:  \r\n",
-        "`diverse` boosts compositional & contextual variety (difference between simultaneous samples). good start is  ~0.2; can be negative.  \r\n",
-        "`expand` boosts training steps in general (difference between consequent samples).  good start is  ~0.2.   \r\n",
-        "`progressive_grow` may boost macro forms creation (especially with lower `learning_rate`), see more [here](https://github.com/eps696/aphantasia/issues/2).   \r\n",
-        "\r\n",
-        "`--keep X` parameter controls how well the next line/image generation follows the previous. By default X = 0, and every frame is produced independently (i.e. randomly initiated). \r\n",
+        "Set the desired video resolution and `duration` (in sec).  \n",
+        "Select CLIP `model` (results do vary!). I prefer ViT for consistency.  \n",
+        "\n",
+        "Set `overscan` to produce semi-seamlessly tileable texture (when off, it's more centered).  \n",
+        "Try adding `noise_scale` to explore some compositional changes.  \n",
+        "Decrease `samples` if you face OOM (it's the main RAM eater).  \n",
+        "Increasing `steps` will elaborate details and make tones smoother, but may start throwing texts like graffiti (and will obviously take more time).  \n",
+        "`show_freq` controls preview frequency (doesn't affect the results; one can set it higher to speed up process). \n",
+        "\n",
+        "Other tricks:  \n",
+        "`diverse` boosts compositional & contextual variety (difference between simultaneous samples). good start is  ~0.2; can be negative.  \n",
+        "`expand` boosts training steps in general (difference between consequent samples).  good start is  ~0.2.   \n",
+        "`progressive_grow` may boost macro forms creation (especially with lower `learning_rate`), see more [here](https://github.com/eps696/aphantasia/issues/2).   \n",
+        "\n",
+        "`--keep X` parameter controls how well the next line/image generation follows the previous. By default X = 0, and every frame is produced independently (i.e. randomly initiated). \n",
         "Setting it higher starts each generation closer to the average of previous runs, effectively keeping macro compositions more similar and the transitions smoother. Safe values are < 0.5 (higher numbers may cause the imagery getting stuck). This behaviour depends on the input, so test with your prompts and see what's better in your case."
       ]
     },
@@ -303,7 +303,7 @@
         "    print(' translated to:', txt)\n",
         "  tx = clip.tokenize(txt).cuda()\n",
         "  txt_enc = model_clip.encode_text(tx).detach().clone()\n",
-        "  out_name = '%03d-%s' % (num+1, txt.translate(str.maketrans(dict.fromkeys(list(\"\\n',—|!?/:;\\\\\"), \"\"))).replace(' ', '_').replace('\"', ''))\n",
+        "  out_name = '%03d-%s' % (num+1, txt.translate(str.maketrans(dict.fromkeys(list(\"\\n',â€”|!?/:;\\\\\"), \"\"))).replace(' ', '_').replace('\"', ''))\n",
         "  tempdir = os.path.join(workdir, out_name)\n",
         "  !rm -rf $tempdir\n",
         "  os.makedirs(tempdir, exist_ok=True)\n",
@@ -390,7 +390,7 @@
       ],
       "execution_count": null,
       "outputs": []
-    }
+    },
     {
       "cell_type": "code",
       "metadata": {
