moviepy with progress bar

--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -21,23 +21,23 @@
         "id": "toWe1IoH7X35"
       },
       "source": [
-        "# Text to Image tool\r\n",
-        "\r\n",
-        "Based on [CLIP](https://github.com/openai/CLIP) + FFT from [Lucent](https://github.com/greentfrapp/lucent) // made by [eps696](https://github.com/eps696) [Vadim Epstein]  \r\n",
-        "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [Hannu Toyryla](https://twitter.com/htoyryla) for ideas\r\n",
-        "\r\n",
-        "## Features \r\n",
-        "* complex requests:\r\n",
-        "  * image and/or text as main prompts  \r\n",
-        "   (composition similarity controlled with [SSIM](https://github.com/Po-Hsun-Su/pytorch-ssim) loss)\r\n",
-        "  * additional text prompts for fine details and to subtract (avoid) topics\r\n",
-        "  * criteria inversion (show \"the opposite\")\r\n",
-        "\r\n",
-        "* generates [FFT-encoded](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) image (massive detailed textures, a la deepdream)\r\n",
-        "* fast convergence\r\n",
-        "* undemanding for RAM - fullHD/4K and above\r\n",
-        "* saving/loading FFT snapshots to resume processing\r\n",
-        "* selectable CLIP model\r\n"
+        "# Text to Image tool\n",
+        "\n",
+        "Based on [CLIP](https://github.com/openai/CLIP) + FFT from [Lucent](https://github.com/greentfrapp/lucent) // made by [eps696](https://github.com/eps696) [Vadim Epstein]  \n",
+        "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [Hannu Toyryla](https://twitter.com/htoyryla) for ideas\n",
+        "\n",
+        "## Features \n",
+        "* complex requests:\n",
+        "  * image and/or text as main prompts  \n",
+        "   (composition similarity controlled with [SSIM](https://github.com/Po-Hsun-Su/pytorch-ssim) loss)\n",
+        "  * additional text prompts for fine details and to subtract (avoid) topics\n",
+        "  * criteria inversion (show \"the opposite\")\n",
+        "\n",
+        "* generates [FFT-encoded](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) image (massive detailed textures, a la deepdream)\n",
+        "* fast convergence\n",
+        "* undemanding for RAM - fullHD/4K and above\n",
+        "* saving/loading FFT snapshots to resume processing\n",
+        "* selectable CLIP model\n"
       ]
     },
     {
@@ -46,8 +46,8 @@
         "id": "QytcEMSKBtN-"
       },
       "source": [
-        "**Run the cell below after each session restart**\r\n",
-        "\r\n",
+        "**Run the cell below after each session restart**\n",
+        "\n",
         "Mark `resume` and upload `.pt` file, if you're resuming from the saved params."
       ]
     },
@@ -58,91 +58,94 @@
         "cellView": "form"
       },
       "source": [
-        "#@title General setup\r\n",
-        "\r\n",
-        "import subprocess\r\n",
-        "CUDA_version = [s for s in subprocess.check_output([\"nvcc\", \"--version\"]).decode(\"UTF-8\").split(\", \") if s.startswith(\"release\")][0].split(\" \")[-1]\r\n",
-        "print(\"CUDA version:\", CUDA_version)\r\n",
-        "\r\n",
-        "if CUDA_version == \"10.0\":\r\n",
-        "    torch_version_suffix = \"+cu100\"\r\n",
-        "elif CUDA_version == \"10.1\":\r\n",
-        "    torch_version_suffix = \"+cu101\"\r\n",
-        "elif CUDA_version == \"10.2\":\r\n",
-        "    torch_version_suffix = \"\"\r\n",
-        "else:\r\n",
-        "    torch_version_suffix = \"+cu110\"\r\n",
-        "\r\n",
-        "!pip install torch==1.7.1{torch_version_suffix} torchvision==0.8.2{torch_version_suffix} -f https://download.pytorch.org/whl/torch_stable.html ftfy regex\r\n",
-        "\r\n",
-        "try: \r\n",
-        "  !pip3 install googletrans==3.1.0a0\r\n",
-        "  from googletrans import Translator, constants\r\n",
-        "  # from pprint import pprint\r\n",
-        "  translator = Translator()\r\n",
-        "except: pass\r\n",
-        "!pip install ftfy==5.8\r\n",
-        "\r\n",
-        "import os\r\n",
-        "import io\r\n",
-        "import time\r\n",
-        "from math import exp\r\n",
-        "import random\r\n",
-        "import imageio\r\n",
-        "import numpy as np\r\n",
-        "import PIL\r\n",
-        "from skimage import exposure\r\n",
-        "from base64 import b64encode\r\n",
-        "\r\n",
-        "import torch\r\n",
-        "import torch.nn as nn\r\n",
-        "import torch.nn.functional as F\r\n",
-        "import torchvision\r\n",
-        "from torch.autograd import Variable\r\n",
-        "\r\n",
-        "from IPython.display import HTML, Image, display, clear_output\r\n",
-        "from IPython.core.interactiveshell import InteractiveShell\r\n",
-        "InteractiveShell.ast_node_interactivity = \"all\"\r\n",
-        "import ipywidgets as ipy\r\n",
-        "# import glob\r\n",
-        "from google.colab import output, files\r\n",
-        "\r\n",
-        "import warnings\r\n",
-        "warnings.filterwarnings(\"ignore\")\r\n",
-        "\r\n",
-        "!pip install git+https://github.com/openai/CLIP.git\r\n",
-        "import clip\r\n",
-        "!pip install git+https://github.com/Po-Hsun-Su/pytorch-ssim\r\n",
-        "import pytorch_ssim as ssim\r\n",
-        "\r\n",
-        "%cd /content\r\n",
-        "!rm -rf aphantasia\r\n",
-        "!git clone https://github.com/eps696/aphantasia\r\n",
-        "%cd aphantasia/\r\n",
-        "from clip_fft import to_valid_rgb, fft_image, slice_imgs, checkout\r\n",
-        "from utils import pad_up_to, basename, img_list, img_read\r\n",
-        "from progress_bar import ProgressIPy as ProgressBar\r\n",
-        "\r\n",
-        "workdir = '_out'\r\n",
-        "tempdir = os.path.join(workdir, 'ttt')\r\n",
-        "\r\n",
-        "clear_output()\r\n",
-        "\r\n",
-        "resume = False #@param {type:\"boolean\"}\r\n",
-        "if resume:\r\n",
-        "  resumed = files.upload()\r\n",
-        "  params_pt = list(resumed.values())[0]\r\n",
-        "  params_pt = torch.load(io.BytesIO(params_pt))\r\n",
-        "\r\n",
-        "def makevid(seq_dir, size=None):\r\n",
-        "  out_sequence = seq_dir + '/%04d.jpg'\r\n",
-        "  out_video = seq_dir + '.mp4'\r\n",
-        "  !ffmpeg -y -v warning -i $out_sequence $out_video\r\n",
-        "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\r\n",
-        "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\r\n",
-        "  return \"\"\"<video %s controls><source src=\"%s\" type=\"video/mp4\"></video>\"\"\" % (wh, data_url)\r\n",
-        "\r\n",
-        "!nvidia-smi -L\r\n",
+        "#@title General setup\n",
+        "\n",
+        "import subprocess\n",
+        "CUDA_version = [s for s in subprocess.check_output([\"nvcc\", \"--version\"]).decode(\"UTF-8\").split(\", \") if s.startswith(\"release\")][0].split(\" \")[-1]\n",
+        "print(\"CUDA version:\", CUDA_version)\n",
+        "\n",
+        "if CUDA_version == \"10.0\":\n",
+        "    torch_version_suffix = \"+cu100\"\n",
+        "elif CUDA_version == \"10.1\":\n",
+        "    torch_version_suffix = \"+cu101\"\n",
+        "elif CUDA_version == \"10.2\":\n",
+        "    torch_version_suffix = \"\"\n",
+        "else:\n",
+        "    torch_version_suffix = \"+cu110\"\n",
+        "\n",
+        "!pip install torch==1.7.1{torch_version_suffix} torchvision==0.8.2{torch_version_suffix} -f https://download.pytorch.org/whl/torch_stable.html ftfy regex\n",
+        "\n",
+        "try: \n",
+        "  !pip3 install googletrans==3.1.0a0\n",
+        "  from googletrans import Translator, constants\n",
+        "  # from pprint import pprint\n",
+        "  translator = Translator()\n",
+        "except: pass\n",
+        "!pip install ftfy==5.8\n",
+        "\n",
+        "import os\n",
+        "import io\n",
+        "import time\n",
+        "from math import exp\n",
+        "import random\n",
+        "import imageio\n",
+        "import numpy as np\n",
+        "import PIL\n",
+        "from skimage import exposure\n",
+        "from base64 import b64encode\n",
+        "\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "import torchvision\n",
+        "from torch.autograd import Variable\n",
+        "\n",
+        "from IPython.display import HTML, Image, display, clear_output\n",
+        "from IPython.core.interactiveshell import InteractiveShell\n",
+        "InteractiveShell.ast_node_interactivity = \"all\"\n",
+        "import ipywidgets as ipy\n",
+        "# import glob\n",
+        "from google.colab import output, files\n",
+        "\n",
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\")\n",
+        "\n",
+        "!pip install git+https://github.com/openai/CLIP.git\n",
+        "import clip\n",
+        "!pip install git+https://github.com/Po-Hsun-Su/pytorch-ssim\n",
+        "import pytorch_ssim as ssim\n",
+        "\n",
+        "%cd /content\n",
+        "!rm -rf aphantasia\n",
+        "!git clone https://github.com/eps696/aphantasia\n",
+        "%cd aphantasia/\n",
+        "from clip_fft import to_valid_rgb, fft_image, slice_imgs, checkout\n",
+        "from utils import pad_up_to, basename, img_list, img_read\n",
+        "from progress_bar import ProgressIPy as ProgressBar\n",
+        "\n",
+        "workdir = '_out'\n",
+        "tempdir = os.path.join(workdir, 'ttt')\n",
+        "\n",
+        "clear_output()\n",
+        "\n",
+        "resume = False #@param {type:\"boolean\"}\n",
+        "if resume:\n",
+        "  resumed = files.upload()\n",
+        "  params_pt = list(resumed.values())[0]\n",
+        "  params_pt = torch.load(io.BytesIO(params_pt))\n",
+        "\n",
+        "import moviepy, moviepy.editor\n",
+        "\n",
+        "def makevid(seq_dir, size=None):\n",
+        "  # out_sequence = seq_dir + '/%05d.jpg'\n",
+        "  out_video = seq_dir + '.mp4'\n",
+        "  # !ffmpeg -y -v quiet -i $out_sequence $out_video\n",
+        "  moviepy.editor.ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, verbose=False) # , ffmpeg_params=ffmpeg_params, logger=None\n",
+        "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\n",
+        "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\n",
+        "  return \"\"\"<video %s controls><source src=\"%s\" type=\"video/mp4\"></video>\"\"\" % (wh, data_url)\n",
+        "\n",
+        "!nvidia-smi -L\n",
         "print('\\nDone!')"
       ],
       "execution_count": null,
@@ -154,10 +157,10 @@
         "id": "CbJ9K4Cq8MtB"
       },
       "source": [
-        "Type some `text` and/or upload some image to start.  \r\n",
-        "`fine_details` input would make micro details follow that topic.  \r\n",
-        "Put to `subtract` the topics, which you would like to avoid in the result.  \r\n",
-        "*NB: more prompts = more memory! (handled by auto-decreasing `samples` amount, hopefully you don't need to act).*  \r\n",
+        "Type some `text` and/or upload some image to start.  \n",
+        "`fine_details` input would make micro details follow that topic.  \n",
+        "Put to `subtract` the topics, which you would like to avoid in the result.  \n",
+        "*NB: more prompts = more memory! (handled by auto-decreasing `samples` amount, hopefully you don't need to act).*  \n",
         "`invert` the whole criteria, if you want to see \"the totally opposite\"."
       ]
     },
@@ -168,18 +171,18 @@
         "cellView": "form"
       },
       "source": [
-        "#@title Input\r\n",
-        "\r\n",
-        "text = \"\" #@param {type:\"string\"}\r\n",
-        "fine_details = \"\" #@param {type:\"string\"}\r\n",
-        "subtract = \"\" #@param {type:\"string\"}\r\n",
-        "translate = False #@param {type:\"boolean\"}\r\n",
-        "invert = False #@param {type:\"boolean\"}\r\n",
-        "upload_image = False #@param {type:\"boolean\"}\r\n",
-        "\r\n",
-        "if translate:\r\n",
-        "  text = translator.translate(text, dest='en').text\r\n",
-        "if upload_image:\r\n",
+        "#@title Input\n",
+        "\n",
+        "text = \"\" #@param {type:\"string\"}\n",
+        "fine_details = \"\" #@param {type:\"string\"}\n",
+        "subtract = \"\" #@param {type:\"string\"}\n",
+        "translate = False #@param {type:\"boolean\"}\n",
+        "invert = False #@param {type:\"boolean\"}\n",
+        "upload_image = False #@param {type:\"boolean\"}\n",
+        "\n",
+        "if translate:\n",
+        "  text = translator.translate(text, dest='en').text\n",
+        "if upload_image:\n",
         "  uploaded = files.upload()"
       ],
       "execution_count": null,
@@ -191,16 +194,16 @@
         "id": "f3Sj0fxmtw6K"
       },
       "source": [
-        "Select CLIP `model` (results do vary!). I prefer ViT for consistency.  \r\n",
-        "`overscan` option produces semi-seamlessly tileable texture (when off, it's more centered).  \r\n",
-        "`sync` value adds SSIM loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity. \r\n",
-        "\r\n",
-        "Decrease `samples` if you face OOM (it's the main RAM eater).  \r\n",
-        "Setting `steps` much higher (1000-..) will elaborate details and make tones smoother, but may start throwing texts like graffiti.  \r\n",
-        "\r\n",
-        "Other tricks:  \r\n",
-        "`diverse` boosts compositional & contextual variety (difference between simultaneous samples). good start is  ~0.2; can be negative.  \r\n",
-        "`expand` boosts training steps in general (difference between consequent samples).  good start is  ~0.2.   \r\n",
+        "Select CLIP `model` (results do vary!). I prefer ViT for consistency.  \n",
+        "`overscan` option produces semi-seamlessly tileable texture (when off, it's more centered).  \n",
+        "`sync` value adds SSIM loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity. \n",
+        "\n",
+        "Decrease `samples` if you face OOM (it's the main RAM eater).  \n",
+        "Setting `steps` much higher (1000-..) will elaborate details and make tones smoother, but may start throwing texts like graffiti.  \n",
+        "\n",
+        "Other tricks:  \n",
+        "`diverse` boosts compositional & contextual variety (difference between simultaneous samples). good start is  ~0.2; can be negative.  \n",
+        "`expand` boosts training steps in general (difference between consequent samples).  good start is  ~0.2.   \n",
         "`progressive_grow` may boost macro forms creation (especially with lower `learning_rate`), see more [here](https://github.com/eps696/aphantasia/issues/2).  "
       ]
     },
