--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -154,10 +154,13 @@
         "    imageio.imsave(fname, np.array(img))\n",
         "    imageio.imsave('result.jpg', np.array(img))\n",
         "\n",
+        "import moviepy, moviepy.editor\n",
+        "\n",
         "def makevid(seq_dir, size=None):\n",
-        "  out_sequence = seq_dir + '/%05d.jpg'\n",
+        "  # out_sequence = seq_dir + '/%05d.jpg'\n",
         "  out_video = seq_dir + '.mp4'\n",
-        "  !ffmpeg -y -v quiet -i $out_sequence $out_video\n",
+        "  # !ffmpeg -y -v quiet -i $out_sequence $out_video\n",
+        "  moviepy.editor.ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, verbose=False) # , ffmpeg_params=ffmpeg_params, logger=None\n",
         "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\n",
         "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\n",
         "  return \"\"\"<video %s controls><source src=\"%s\" type=\"video/mp4\"></video>\"\"\" % (wh, data_url)\n",
@@ -394,8 +397,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
-        "id": "rARq2n6LgVVp"
+        "id": "rARq2n6LgVVp",
+        "cellView": "form"
       },
       "source": [
         "#@markdown Run this, if you need to make the same video of another length (model must be the same)\n",
