enhanced ssim handling

--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -93,6 +93,7 @@
         "import PIL\n",
         "from skimage import exposure\n",
         "from base64 import b64encode\n",
+        "import moviepy, moviepy.editor\n",
         "\n",
         "import torch\n",
         "import torch.nn as nn\n",
@@ -133,8 +134,6 @@
         "  resumed = files.upload()\n",
         "  params_pt = list(resumed.values())[0]\n",
         "  params_pt = torch.load(io.BytesIO(params_pt))\n",
-        "\n",
-        "import moviepy, moviepy.editor\n",
         "\n",
         "def makevid(seq_dir, size=None):\n",
         "  # out_sequence = seq_dir + '/%05d.jpg'\n",
@@ -228,7 +227,7 @@
         "#@markdown > Config\n",
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
         "overscan = True #@param {type:\"boolean\"}\n",
-        "sync =  0.01 #@param {type:\"number\"}\n",
+        "sync =  0.5 #@param {type:\"number\"}\n",
         "contrast = 1. #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
         "steps = 200 #@param {type:\"integer\"}\n",
@@ -265,8 +264,11 @@
         "  in_sliced = slice_imgs([img_in], samples, modsize, transform=norm_in)[0]\n",
         "  img_enc = model_clip.encode_image(in_sliced).detach().clone()\n",
         "  if sync > 0:\n",
+        "    overscan = True\n",
         "    ssim_loss = ssim.SSIM(window_size = 11)\n",
-        "    img_in = F.interpolate(img_in, (sideY, sideX)).float()\n",
+        "    ssim_size = [sideY//8, sideX//8]\n",
+        "    img_in = F.interpolate(img_in, ssim_size).float()\n",
+        "    # img_in = F.interpolate(img_in, (sideY, sideX)).float()\n",
         "  else:\n",
         "    del img_in\n",
         "  del in_sliced; torch.cuda.empty_cache()\n",
@@ -343,13 +345,13 @@
         "    loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
         "    del out_enc2; torch.cuda.empty_cache()\n",
         "  if upload_image:\n",
-        "      loss += sign * torch.cosine_similarity(img_enc, out_enc, dim=-1).mean()\n",
+        "      loss += sign * 0.5 * torch.cosine_similarity(img_enc, out_enc, dim=-1).mean()\n",
         "  if len(text) > 0: # input text\n",
         "      loss += sign * torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
         "  if len(subtract) > 0: # subtract text\n",
         "      loss += -sign * torch.cosine_similarity(txt_enc0, out_enc, dim=-1).mean()\n",
         "  if sync > 0 and upload_image: # image composition sync\n",
-        "      loss *= 1. + sync * (steps/(i+1) * ssim_loss(img_out, img_in) - 1)\n",
+        "      loss -= sync * ssim_loss(F.interpolate(img_out, ssim_size).float(), img_in)\n",
         "  if len(fine_details) > 0: # input text for micro details\n",
         "      imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=True)\n",
         "      out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
