--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -251,7 +251,7 @@
         "if 'RN' in model:\n",
         "  samples = int(samples * xmem[model])\n",
         "\n",
-        "if diverse > 0:\n",
+        "if diverse != 0:\n",
         "  samples = int(samples * 0.5)\n",
         "        \n",
         "norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
@@ -339,7 +339,7 @@
         "  micro = False if len(fine_details) > 0 else None\n",
         "  imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=micro)\n",
         "  out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
-        "  if diverse > 0:\n",
+        "  if diverse != 0:\n",
         "    imgs_sliced = slice_imgs([image_f()], samples, modsize, norm_in, overscan=overscan, micro=micro)\n",
         "    out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
         "    loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
