--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -249,7 +249,7 @@
         "if 'RN' in model:\n",
         "  samples = int(samples * xmem[model])\n",
         "\n",
-        "if diverse > 0:\n",
+        "if diverse != 0:\n",
         "  samples = int(samples * 0.5)\n",
         "        \n",
         "norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
@@ -321,7 +321,7 @@
         "    imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, overscan=overscan, micro=None)\n",
         "    out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
         "    loss -= torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
-        "    if diverse > 0:\n",
+        "    if diverse != 0:\n",
         "      imgs_sliced = slice_imgs([image_f(noise)], samples, modsize, norm_in, overscan=overscan, micro=None)\n",
         "      out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
         "      loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
